2010-05-05  DJ Delorie  <dj@redhat.com>

	* libc/Makefile.am (stmp-sigset, stmp-iconvset, stmp-extra,
	stmp-stdio64, stmp-posix,stmp-targetdep): Use unique temporary
	file names to allow for parallel installs.
	(CLEANFILES): Add new temporary file names.
	* libc/Makefile.in: Regenerate.

2010-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/lctype.c: Include <string.h> and "setlocale.h".
	(_C_ctype_locale): Add braces to initializer.
	(__ctype_load_locale): Fix compiler warnings in non-Cygwin case.
	* libc/locale/nl_langinfo.c (nl_langinfo): Expose _NL_CTYPE_MB_CUR_MAX
	case only if __HAVE_LOCALE_INFO__ is defined.

2010-05-02  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/wctob.c (wctob): Reorganize and fix WEOF check.  Rename
	pwc to pmb and convert to array to avoid buffer overflow.  Rename c to
	wc.  Check wc for WEOF instead of for EOF.  Return first byte of pmb if
	__wctomb conversion returned exactly one byte, EOF otherwise.

2010-04-30  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/langinfo.h: Fix #endif positioning.

2010-04-28  Corinna Vinschen  <corinna@vinschen.de>

	Extend locale support to maintain wide char values of native strings
	if __HAVE_LOCALE_INFO_EXTENDED__ is defined.
	* libc/include/langinfo.h (enum __nl_item): New type.  Define all
	native values accessible through nl_langinfo.  Define previously
	existing POSIX-compatible values as macros as well.
	* libc/include/stdlib.h (__mb_cur_max): Drop declaration.
	(__locale_mb_cur_max): Declare.
	(MB_CUR_MAX): Re-define calling __locale_mb_cur_max.
	* libc/locale/Makefile.am (ELIX_SOURCES): Add lctype.c.
	* libc/locale/Makefile.in: Regenerate.
	* libc/locale/lctype.c: New file to define and load LC_CTYPE category.
	* libc/locale/lctype.h: New file, matching header.
	* libc/locale/lmessages.c (_C_messages_locale): Add default values for
	wide char members.
	(__messages_load_locale): Add _C_messages_locale in call to 
	__set_lc_messages_from_win.