@@ -40,6 +40,7 @@ managing areas of memory.  The corresponding declarations are in
 * strnlen::     Character string length
 * strpbrk::     Find chars in string
 * strrchr::     Reverse search for character in string
+* strsignal::	Return signal message string
 * strspn::      Find initial match
 * strstr::      Find string segment
 * strtok::      Get next token from a string
@@ -152,6 +153,9 @@ managing areas of memory.  The corresponding declarations are in
 
 @page
 @include string/strrchr.def
+
+@page
+@include string/strsignal.def
 
 @page
 @include string/strspn.def
